data/derived/fa15/progs/unify/prog3372.ml.out
Characters 74-75:
  List.fold_left f base fs;;
                 ^
Error: This expression has type ('a -> 'b) -> 'a -> 'b
       but an expression was expected of type ('a -> 'b) -> 'a -> 'a -> 'b
       The type variable 'b occurs inside 'a -> 'b
